Update: Fix styling for visibility

--- a/packages/reports/app/styles/navi-reports/components/navi-collection.less
+++ b/packages/reports/app/styles/navi-reports/components/navi-collection.less
@@ -61,8 +61,8 @@
     .action {
       margin-right: 10px;
 
-      .modal {
-        visibility: visible !important;
+      .modal.is-active {
+        visibility: visible;
       }
     }
 
